src/snapshots/ec2hx__rulers-conf.snap
---
source: src/lib.rs
expression: config_toml
snapshot_kind: text
---
editor.insert-final-newline = true
editor.text-width = 80
editor.rulers = [81]
